# INT3117_TESTING

./: check.cpp  checktest.cpp  kiemthudongdieukhien.docx  kiemthudongdulieu.docx  testcases.cpp  ~$emthudongdulieu.docx
my_project/: CMakeLists.txt
my_project/include/: mycode.h
my_project/src/: CMakeLists.txt  mycode.cpp
my_project/tests/: CMakeLists.txt  test_mycode.cpp
